[package]
name = "bnd4"
version = "0.1.0"
edition = "2024"
description = "A BND4 parser in Rust, typically used for parsing FromSoftware game save data."
repository = "https://github.com/usrbinsam/bnd4"
license = "BSD-3"
keywords = ["bnd4", "darksouls", "elden-ring"]
readme = "README.md"

[dependencies]
aes = "0.8.4"
binrw = "0.15.0"
cbc = { version = "0.1.2", optional = true }
ctr = { version = "0.9.2", optional = true }
encoding_rs = "0.8.35"
hex = "0.4.3"

[features]
default = ["cbc"]
cbc = ["dep:cbc"]
ctr = ["dep:ctr"]
